# Tetris

./: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
api/: Dockerfile.prod  main.py  pyproject.toml  setting.py
api/databases/: alembic.ini
api/databases/migrations/: env.py
api/databases/migrations/versions/: daf7ae6a17a1_create_users_table.py
api/logger/: logger_config.py
api/models/: user.py
api/repositories/: user.py
api/routers/: user.py
api/schemas/: csrf.py  user.py
api/settings/: auth_utils.py
api/usecases/: user.py
front/: package-lock.json  package.json
front/src/components/: AuthForm.tsx  Blocks.tsx  Board.tsx  GameMunuCard.tsx  Header.tsx  RankingTable.tsx
front/src/features/blocks/: blocks-constants.ts  blocks-types.ts  index.ts
front/src/features/timer/: index.ts
front/src/hooks/: useBlocks.ts  useKeyHandler.ts  useMutateAuth.ts  useMutateUser.ts  useProcessAuth.ts  useQueryUser.ts  useTimer.ts
front/src/pages/: _app.tsx  _document.tsx  index.tsx  menu.tsx  play.tsx  signup.tsx  tetris.tsx
front/src/providers/: ChakraProviders.tsx  CsrfProviders.tsx  Providers.tsx
front/src/slices/: appSlice.ts
front/src/stores/app/: store.ts
front/src/stores/useUsers/: getUsers.ts
front/src/styles/: globals.css
front/src/types/: Tetrimino.ts
front/src/types/csrf/: index.ts
front/src/types/users/: index.ts
front/src/utils/: api-client.ts  constants.ts  urls.ts
front/src/utils/theme/: index.ts
nginx/: Dockerfile  fastapi.conf
nginx/conf/: fastapi.conf
